conectando el html al css

--- a/index.html
+++ b/index.html
@@ -3,16 +3,32 @@
 <head>
 	<meta charset="utf-8">
 	<title>lenguajes de la web</title>
+	<link rel="stylesheet" type="text/css" href="main.css"/>
 </head>
 <body>
-	<h1 style="color:red"; "weight: 500"; "family font: Arial"; "font size: 20">Algunos lenguajes de la web</h1>
+	<h1>Algunos lenguajes de la web</h1>
 	<h2><strong>HTML + CSS + Javascript</strong></h2>
 		<ul>
 			<li><strong>HTML5</strong></li>
+			<img src="img/html.png">
 		</ul>
-		<img src="img/html.png" style="border:1px solid blue;">
-			<p><strong>HTML5</strong><em>(HyperText Markup Languaje</em> , versión 5) es la revición importante del lenguaje básico de la <a ref="www.google.com"> World Wide Web></a>,HTML</p>
-			<p>Usa la extensión.<em>html</em></p>
+			
+			<p><strong>HTML5</strong><em>(HyperText Markup Languaje</em> , versión 5) es la revisión importante del lenguaje básico de la <a href="www.google.com"> World Wide Web</a>,HTML</p>
+			<p><strong>Usa la extensión.<em>html</em></strong></p>
+		<ul>
+			<li><strong>CSS</strong></li>
+			<img src="img/css.png">
+		</ul>
+			
+			<p><strong>Hoja de estilo en cascada</strong>o<strong>CSS</strong>(siglas en inglés de <em>cascading style sheets</em>) es un lenguaje usado para definir y crear la presentación de un documento estructurado escrito en HTML.
+			</p>
+			<p><strong>Usa la extensión <em>css</em></strong></p>
+		<ul>
+			<li>JS</li>
+			<img src="img/js.png">
+		</ul>
+			<p><strong>Javascript</strong>(abreviado comúnmente "<strong>JS</strong>") es un lenguaje de programación interpretado utilizado principalmente en el lado del cliente <em>(client-side)</em>implementado como parte de una navegador web permitiendo mejoras en la interfaz de usuario y páginas web dinámicas.</p>
+			<p><strong>Usa la extención .js</strong></p>
 
 
 </body>
